--- a/AplicacionWeblvl3/AplicacionWeblvl3/AplicacionWeblvl3.csproj
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/AplicacionWeblvl3.csproj
@@ -84,6 +84,7 @@
     <Content Include="content\bootstrap.rtl.css" />
     <Content Include="content\bootstrap.rtl.min.css" />
     <Content Include="Default.aspx" />
+    <Content Include="FormularioArticulos.aspx" />
     <Content Include="Global.asax" />
     <Content Include="js\bootstrap.bundle.js" />
     <Content Include="js\bootstrap.bundle.min.js" />
@@ -102,6 +103,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FormularioArticulos.aspx.cs">
+      <DependentUpon>FormularioArticulos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FormularioArticulos.aspx.designer.cs">
+      <DependentUpon>FormularioArticulos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
