--- a/AplicacionWeblvl3/AplicacionWeblvl3/AplicacionWeblvl3.csproj
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/AplicacionWeblvl3.csproj
@@ -84,6 +84,7 @@
     <Content Include="content\bootstrap.rtl.css" />
     <Content Include="content\bootstrap.rtl.min.css" />
     <Content Include="Default.aspx" />
+    <Content Include="Error.aspx" />
     <Content Include="FormularioArticulos.aspx" />
     <Content Include="Global.asax" />
     <Content Include="js\bootstrap.bundle.js" />
@@ -103,6 +104,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Error.aspx.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.designer.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
     </Compile>
     <Compile Include="FormularioArticulos.aspx.cs">
       <DependentUpon>FormularioArticulos.aspx</DependentUpon>
