--- a/AplicacionWeblvl3/AplicacionWeblvl3/AplicacionWeblvl3.csproj
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/AplicacionWeblvl3.csproj
@@ -95,6 +95,7 @@
     <Content Include="js\bootstrap.min.js" />
     <Content Include="Login.aspx" />
     <Content Include="GridArticulos.aspx" />
+    <Content Include="MiPerfil.aspx" />
     <Content Include="Registrar.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -143,6 +144,13 @@
     </Compile>
     <Compile Include="GridArticulos.aspx.designer.cs">
       <DependentUpon>GridArticulos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MiPerfil.aspx.cs">
+      <DependentUpon>MiPerfil.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MiPerfil.aspx.designer.cs">
+      <DependentUpon>MiPerfil.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registrar.aspx.cs">
