--- a/AplicacionWeblvl3/negocio/negocio.csproj
+++ b/AplicacionWeblvl3/negocio/negocio.csproj
@@ -46,6 +46,7 @@
     <Compile Include="MarcasNegocio.cs" />
     <Compile Include="ArticulosNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seguridad.cs" />
     <Compile Include="UsuarioNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
