--- a/AplicacionWeblvl3/AplicacionWeblvl3/AplicacionWeblvl3.csproj
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/AplicacionWeblvl3.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Registrar.aspx.designer.cs">
       <DependentUpon>Registrar.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Validacion.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="MiMaster.Master" />
