--- a/AplicacionWeblvl3/AplicacionWeblvl3/Web.config
+++ b/AplicacionWeblvl3/AplicacionWeblvl3/Web.config
@@ -4,7 +4,13 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <system.web>
+	<!--<appSettings>
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+	</appSettings>-->
+
+	<!--5. ASP Validators: Required-->
+
+	<system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
